<resources>
    <string name="app_name">Plan-It</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date">Date</string>
    <string name="plussign">plusSign</string>
    <string name="addtask">addTask</string>
    <string name="exit">exit</string>
    <string name="enter_your_task_below">Enter Your Task Below</string>
    <string name="task">Task</string>
    <string name="add_task">Add Task</string>
    <string name="edit_your_task_below">Edit your task below</string>
    <string name="todo">TODO</string>
    <string name="clearall">clearall</string>
    <string name="new_task">New Task</string>
    <string name="clear_all">Clear All</string>
    <string name="taskhint">Task</string>
</resources>
